change responsive spacing utils to avoid the xs abbreviation in the class name for that tier

--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -17,21 +17,42 @@
       $length-y:   map-get($lengths, y);
 
       @include media-breakpoint-up($breakpoint) {
-        .#{$abbrev}-#{$breakpoint}-#{$size} { #{$prop}:        $length-y $length-x !important; } // a = All sides
-        .#{$abbrev}t-#{$breakpoint}-#{$size} { #{$prop}-top:    $length-y !important; }
-        .#{$abbrev}r-#{$breakpoint}-#{$size} { #{$prop}-right:  $length-x !important; }
-        .#{$abbrev}b-#{$breakpoint}-#{$size} { #{$prop}-bottom: $length-y !important; }
-        .#{$abbrev}l-#{$breakpoint}-#{$size} { #{$prop}-left:   $length-x !important; }
+        $min: breakpoint-min($breakpoint, $grid-breakpoints);
 
-        // Axes
-        .#{$abbrev}x-#{$breakpoint}-#{$size} {
-          #{$prop}-right:  $length-x !important;
-          #{$prop}-left:   $length-x !important;
+        @if $min {
+          // everything else
+          @media (min-width: $min) {
+            .#{$abbrev}-#{$breakpoint}-#{$size} { #{$prop}:        $length-y $length-x !important; } // a = All sides
+            .#{$abbrev}t-#{$breakpoint}-#{$size} { #{$prop}-top:    $length-y !important; }
+            .#{$abbrev}r-#{$breakpoint}-#{$size} { #{$prop}-right:  $length-x !important; }
+            .#{$abbrev}b-#{$breakpoint}-#{$size} { #{$prop}-bottom: $length-y !important; }
+            .#{$abbrev}l-#{$breakpoint}-#{$size} { #{$prop}-left:   $length-x !important; }
+            .#{$abbrev}x-#{$breakpoint}-#{$size} {
+              #{$prop}-right:  $length-x !important;
+              #{$prop}-left:   $length-x !important;
+            }
+            .#{$abbrev}y-#{$breakpoint}-#{$size} {
+              #{$prop}-top:    $length-y !important;
+              #{$prop}-bottom: $length-y !important;
+            }
+          }
+        } @else {
+          // xs
+          .#{$abbrev}-#{$size}  { #{$prop}:        $length-y $length-x !important; } // a = All sides
+          .#{$abbrev}t-#{$size} { #{$prop}-top:    $length-y !important; }
+          .#{$abbrev}r-#{$size} { #{$prop}-right:  $length-x !important; }
+          .#{$abbrev}b-#{$size} { #{$prop}-bottom: $length-y !important; }
+          .#{$abbrev}l-#{$size} { #{$prop}-left:   $length-x !important; }
+          .#{$abbrev}x-#{$size} {
+            #{$prop}-right:  $length-x !important;
+            #{$prop}-left:   $length-x !important;
+          }
+          .#{$abbrev}y-#{$size} {
+            #{$prop}-top:    $length-y !important;
+            #{$prop}-bottom: $length-y !important;
+          }
         }
-        .#{$abbrev}y-#{$breakpoint}-#{$size} {
-          #{$prop}-top:    $length-y !important;
-          #{$prop}-bottom: $length-y !important;
-        }
+
       }
     }
   }
